# argon

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  audit.toml  clippy.toml
.github/workflows/: canary.yml  ci.yml
crates/argon-ast/: Cargo.toml
crates/argon-ast/src/: lib.rs  node.rs  visit.rs
crates/argon-async/: Cargo.toml
crates/argon-async/src/: ffi.rs  lib.rs  reactor.rs  scheduler.rs
crates/argon-backend-traits/: Cargo.toml
crates/argon-backend-traits/src/: fs.rs  http.rs  lib.rs  net.rs  ws.rs
crates/argon-borrowck/: Cargo.toml
crates/argon-borrowck/src/: borrow_checker_tests.rs  lib.rs
crates/argon-cli/: Cargo.toml
crates/argon-cli/src/: cli_tests.rs  main.rs
crates/argon-cli/tests/: cli_tests.rs
crates/argon-codegen-js/: Cargo.toml
crates/argon-codegen-js/src/: codegen_tests.rs  expr.rs  ir_codegen.rs  jsx.rs  lib.rs  runtime.rs  std_intrinsics.rs  stmt.rs
crates/argon-codegen-native/: Cargo.toml
crates/argon-codegen-native/src/: intrinsics.rs  lib.rs  linker.rs  lower.rs  runtime.rs  types.rs
crates/argon-codegen-wasm/: Cargo.toml
crates/argon-codegen-wasm/src/: lib.rs
crates/argon-diagnostics/: Cargo.toml
crates/argon-diagnostics/src/: error.rs  lib.rs  warning.rs
crates/argon-driver/: Cargo.toml
crates/argon-driver/benches/: driver_perf.rs
crates/argon-driver/src/: lib.rs  session.rs
crates/argon-interop/: Cargo.toml
crates/argon-interop/src/: lib.rs
crates/argon-ir/: Cargo.toml
crates/argon-ir/src/: ir_builder_tests.rs  lib.rs  passes.rs  passes_tests.rs
crates/argon-ir/src/passes/: async_lowering.rs  cfg_flatten.rs  ssa.rs
crates/argon-lexer/: Cargo.toml
crates/argon-lexer/src/: error.rs  lexer_tests.rs  lib.rs  token.rs
crates/argon-parser/: Cargo.toml
crates/argon-parser/src/: lib.rs  parser_tests.rs
crates/argon-runtime/: Cargo.toml
crates/argon-runtime/src/: lib.rs  test_formatter.rs  test_framework.rs
crates/argon-stdlib/: Cargo.toml
crates/argon-stdlib/src/: lib.rs
crates/argon-stdlib/stdlib/: async.arg  error.arg  fs.arg  http.arg  io.arg  math.arg  net.arg  prelude.arg  test.arg  ws.arg
crates/argon-target/: Cargo.toml
crates/argon-target/src/: lib.rs
crates/argon-types/: Cargo.toml
crates/argon-types/src/: desugar.rs  lib.rs  type_checker.rs  type_checker_tests.rs  types.rs
crates/safescript-ast/: Cargo.toml
crates/safescript-ast/src/: lib.rs  node.rs  visit.rs
crates/safescript-borrowck/: Cargo.toml
crates/safescript-borrowck/src/: borrow_checker_tests.rs  lib.rs
crates/safescript-cli/: Cargo.toml
crates/safescript-cli/src/: cli_tests.rs  main.rs
crates/safescript-codegen-js/: Cargo.toml
crates/safescript-codegen-js/src/: codegen_tests.rs  lib.rs
crates/safescript-codegen-wasm/: Cargo.toml
crates/safescript-codegen-wasm/src/: lib.rs
crates/safescript-diagnostics/: Cargo.toml
crates/safescript-diagnostics/src/: error.rs  lib.rs  warning.rs
crates/safescript-interop/: Cargo.toml
crates/safescript-interop/src/: lib.rs
crates/safescript-ir/: Cargo.toml
crates/safescript-ir/src/: ir_builder_tests.rs  lib.rs
crates/safescript-lexer/: Cargo.toml
crates/safescript-lexer/src/: error.rs  lexer_tests.rs  lib.rs  token.rs
crates/safescript-parser/: Cargo.toml
crates/safescript-parser/src/: lib.rs  parser_tests.rs
crates/safescript-runtime/: Cargo.toml
crates/safescript-runtime/src/: lib.rs
crates/safescript-stdlib/: Cargo.toml
crates/safescript-stdlib/src/: lib.rs
crates/safescript-types/: Cargo.toml
crates/safescript-types/src/: lib.rs  type_checker.rs  type_checker_tests.rs  types.rs
docs/superpowers/plans/: 2026-05-02-test-framework.md
docs/superpowers/specs/: 2026-05-02-test-framework-design.md
examples/: arithmetic.arg  arithmetic.ss  async.arg  async_fs.arg  async_http.arg  async_sleep.arg  boolean.arg  borrowing.arg  borrowing.ss  classes.arg  collections.arg  control-flow.arg  debug_simple.arg  enum.arg  esm.arg  fs_file_handle.arg  fs_native_test.arg  fs_test.arg  function.arg  functions.arg  generic_fn.arg  generic_simple.arg  generic_simple2.arg  generic_struct.arg  http_test.arg  interface.arg  interop.arg  jsx.arg  jsx_simple.arg  match.arg  named_args.arg  native_structs.arg  net_test.arg  numeric-types.arg  object.arg  object.ss  option-result.arg  option-result.ss  ownership.arg  ownership.ss  (+15 more)
examples/modules/: main.arg  math.arg  utils.arg
scripts/: benchmark-cli.sh
tests/fixtures/: class_example.arg  function.arg  function.ss  hello.arg  hello.ss  interface_example.arg  interface_example.ss  interop_example.arg  interop_example.ss  simple.arg  struct_example.arg  struct_example.ss
tests/fixtures/test-framework/: assertions.test.arg  basic.test.arg  filtering.test.arg  lifecycle.test.arg
