[workspace]
members = [
    "crates/argon-cli",
    "crates/argon-codegen-js",
    "crates/argon-codegen-wasm",
    "crates/argon-interop",
    "crates/argon-stdlib",
    "crates/argon-diagnostics",
    "crates/argon-lexer",
    "crates/argon-ast",
    "crates/argon-parser",
    "crates/argon-types",
    "crates/argon-borrowck",
    "crates/argon-ir",
    "crates/argon-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Argon Team"]
license = "MIT"
repository = "https://github.com/argon/argon"

[workspace.dependencies]
# Error reporting
ariadne = "0.5"
atty = "0.2"

# Memory management
bumpalo = "3.14"

# Collections
indexmap = { version = "2.2", features = ["std"] }
smallvec = { version = "1.13", features = ["union", "const_new"] }
smartstring = "1.0"
hashbrown = "0.14"

# String interning
lasso = "0.7"

# Synchronization
parking_lot = "0.12"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.34"

# Codegen - WASM
wasm-encoder = "0.41"
wasmprinter = "0.224"
sourcemap = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Path handling
 camino = "0.10"
 directories = "5.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
