[package]
name = "argon-borrowck"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon-ast = { path = "../argon-ast" }
argon-types = { path = "../argon-types" }
argon-diagnostics = { path = "../argon-diagnostics" }
bumpalo.workspace = true
indexmap.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
argon-parser = { path = "../argon-parser" }
