[package]
name = "argon-codegen-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
argon-ir = { path = "../argon-ir" }
argon-ast = { path = "../argon-ast" }
argon-target = { path = "../argon-target" }
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
target-lexicon = "0.13"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.8"
