[package]
name = "argon-codegen-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon-ir = { path = "../argon-ir" }
argon-ast = { path = "../argon-ast" }
argon-parser = { path = "../argon-parser" }
argon-interop = { path = "../argon-interop" }
argon-stdlib = { path = "../argon-stdlib" }
argon-diagnostics = { path = "../argon-diagnostics" }
wasm-encoder.workspace = true
indexmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
