[package]
name = "argon-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon-ast = { path = "../argon-ast" }
argon-parser = { path = "../argon-parser" }
argon-types = { path = "../argon-types" }
argon-borrowck = { path = "../argon-borrowck" }
argon-ir = { path = "../argon-ir" }
argon-codegen-js = { path = "../argon-codegen-js" }
argon-codegen-wasm = { path = "../argon-codegen-wasm" }
argon-diagnostics = { path = "../argon-diagnostics" }
thiserror.workspace = true
wasmprinter.workspace = true

[dev-dependencies]
tempfile = "3.8"

