[package]
name = "safescript-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ariadne.workspace = true
bumpalo.workspace = true
indexmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
serde.workspace = true
parking_lot.workspace = true

[dev-dependencies]
proptest.workspace = true
