[package]
name = "safescript-codegen-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
safescript-ir = { path = "../safescript-ir" }
safescript-ast = { path = "../safescript-ast" }
safescript-interop = { path = "../safescript-interop" }
safescript-stdlib = { path = "../safescript-stdlib" }
safescript-diagnostics = { path = "../safescript-diagnostics" }
indexmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
sourcemap.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
