[package]
name = "safescript-codegen-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
safescript-ir = { path = "../safescript-ir" }
safescript-interop = { path = "../safescript-interop" }
safescript-stdlib = { path = "../safescript-stdlib" }
safescript-diagnostics = { path = "../safescript-diagnostics" }
wasm-encoder.workspace = true
indexmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
