[package]
name = "safescript-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
safescript-ast = { path = "../safescript-ast" }
safescript-types = { path = "../safescript-types" }
safescript-borrowck = { path = "../safescript-borrowck" }
anyhow = "1.0"
